--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,2 +1,12 @@
-<h1>Posts#new</h1>
-<p>Find me in app/views/posts/new.html.erb</p>
+<h1>write new post:</h1>
+
+<%= form_for([@admin, @post]) do |f| %>
+
+	<%= f.label :title %>
+	<%= f.text_field :title, class: 'form-control' %>			
+	<%= f.label :body %>
+	<%= f.text_area :body, class: 'form-control' %>
+
+	<%= f.submit "submit", class: "btn btn-primary" %>
+
+<% end %>
