--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
 <body>
 	<%= render 'layouts/header' %>
 	<div class="container">		
-		<h1 class='blog-title'> Adventures of a asspiring developer </h1>
+		<h1 class='blog-title'> Adventures of an aspiring web developer </h1>
 		<%= yield %>
 	</div>
 	<div class='link-box'>
