--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,7 @@
 <p> welcome to the home page </p>
 
-<%=link_to "make a new post","/admins/#{current_user.id}/posts/new"%>
+<% if logged_in? %>
+
+<%=link_to "make a new post","/admins/#{current_user.id}/posts/new"%>	
+
+<% end %>
