--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -5,7 +5,7 @@
 	<%= f.label :title %>
 	<%= f.text_field :title, class: 'form-control' %>			
 	<%= f.label :body %>
-	<%= f.text_area :body, class: 'form-control' %>
+	<%= f.text_area :body, class: 'form-control', wrap: "hard" %>
 
 	<%= f.submit "submit", class: "btn btn-primary" %>
 
