--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,10 +1,11 @@
 
 <% @posts.each do |post| %>
 	<div class="post">
-
-		<h3 class='post-title'> <%= h(post.title).gsub(/\n/, '<br/>').html_safe %> </h3>
+		<%= puts "admin id: #{post.admin_id}" %>	
+		<h3 class='post-title'> <%= link_to  h(post.title).gsub(/\n/, '<br/>').html_safe , admin_post_path(admin_id: post.admin_id, id: post.id) %> </h3>
 		<div class='post-body'> <%= h(post.body).gsub(/\n/, '<br/>').html_safe %> </div>
-		<%= button_to "edit post", "/admins/1/posts/#{post.id}/edit", method: :get %>
+		<%= button_to "edit post", "/admins/#{post.admin_id}/posts/#{post.id}/edit", method: :get %>
+
 	</div>
 	<p></p>
 <% end %>	
