fixed bad links

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,9 +17,9 @@
 			<%= yield %>
 		</div>
 		<div class='link-box'>
-			<a href="http://www.google.com">personal site</a>
-			<p><a href="http://www.google.com">gitHub</a></p>
-			<a href="http://www.google.com">guildHouse</a>
+			<a href="http://kjsuarez.github.io">personal site</a>
+			<p><a href="https://github.com/kjsuarez">gitHub</a></p>
+			<a href="https://guild-house.herokuapp.com/">guildHouse</a>
 		</div>
 	</body>
 </html>
